--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint .",
         "format": "prettier --write .",
         "test": "jest",
+        "test:langchain": "mocha tests/unit/langchain-llm-format.test.js",
         "mcp": "node n8n-workflow-mcp.js",
         "build": "tsc"
     },
@@ -41,6 +42,7 @@
         "chai": "^5.2.0",
         "eslint": "^8.46.0",
         "jest": "^29.6.2",
+        "mocha": "^10.8.2",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.1",
         "sinon": "^20.0.0",
