--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "description": "MCP server for building n8n workflows",
     "main": "src/index.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ifmelate/n8n-workflow-builder-mcp.git"
+    },
     "scripts": {
         "start": "node dist/index.js",
         "dev": "nodemon --watch src --ext ts,json --exec \"npm run build && node dist/index.js\"",
@@ -19,7 +23,7 @@
         "workflow",
         "automation"
     ],
-    "author": "",
+    "author": "ifmelate",
     "license": "MIT",
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.11.3",
