--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "name": "n8n-workflow-builder-mcp",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "MCP server for building n8n workflows",
-    "main": "src/index.js",
+    "main": "dist/index.js",
+    "bin": {
+        "n8n-workflow-builder-mcp": "dist/index.js"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/ifmelate/n8n-workflow-builder-mcp.git"
@@ -36,6 +39,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "n8n-workflow-builder-mcp": "^0.1.0",
         "node-fetch": "^2.6.7",
         "uuid": "^9.0.1",
         "winston": "^3.10.0",
