--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
     "name": "n8n-workflow-builder-mcp",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "MCP server for building n8n workflows",
     "main": "dist/index.js",
     "bin": {
         "n8n-workflow-builder-mcp": "dist/index.js"
     },
+    "files": [
+        "dist/",
+        "workflow_nodes/",
+        "README.md",
+        "LICENSE"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/ifmelate/n8n-workflow-builder-mcp.git"
