--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/ifmelate/n8n-workflow-builder-mcp.git"
+        "url": "git+https://github.com/ifmelate/n8n-workflow-builder-mcp.git"
     },
     "scripts": {
         "start": "node dist/index.js",
